# Language-Model

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build.sh  dl_service.Dockerfile  docker-compose.yml  language_modeling.py  language_modelling.py  main.py  requirements.txt  scrapy.cfg  setup.cfg
.github/workflows/: main.yml
Model/: model.py
Tokenizer/: train_tokenizer.py
Training/: training_eval.py
Utils/: data.py
language_model/Utils/: utils.py
language_model/domain/: __main__.py
language_model/domain/modeling/: __init__.py
language_model/domain/modeling/data/: dataloader.py  dataset.py
language_model/domain/modeling/model/neural_network/: nn.py
language_model/domain/modeling/model/utils/: training.py
language_model/domain/scraping/scrapers/bfm/: spiders.py
language_model/model/: __init__.py  model.py
language_model/model/tests/: test_model.py
language_model/preprocessing/: __init__.py  data.py  tokenizer.py
language_model/preprocessing/tests/: test_data.py  test_tokenizer.py
language_modeling/domain/: __main__.py
language_modeling/domain/modeling/: __init__.py
language_modeling/domain/modeling/model/neural_network/: nn.py
language_modeling/domain/modeling/utils/data/: __init__.py  dataloader.py  dataset.py  errors.py
language_modeling/domain/modeling/utils/decoder/: __init__.py  greedy_decoder.py
language_modeling/domain/modeling/utils/logger/: base.py  tensorboard_logger.py
language_modeling/domain/modeling/utils/saver/: __init__.py  saver.py
language_modeling/domain/scraper/: settings.py
language_modeling/domain/scraper/pipelines/: __init__.py  preprocess_pipeline.py
language_modeling/infra/application/: application.py
language_modeling/infra/application/deep_learning_service/: __main__.py
language_modeling/infra/application/frontend/: __init__.py  __main__.py  frontend.py
language_modeling/infra/tensorboard/: Dockerfile
mlruns/0/: meta.yaml
tensorboard/: requirements.txt
test/domain/data/: test_dataloader.py  test_dataset.py
test/domain/model/neural_network/: test_nn.py
test/domain/model/utils/: test_training.py
tests/infra/application/frontend/: test_frontend.py
(+27 files in other folders)
