[metadata]
name = language_modeling
version = 0.0.1
long_description = file: README.md

[options]
packages = find:
include_package_data = False
install_requires =
    tensorboard==2.8.0
    tokenizers==0.11.5
    torch==1.11.0
    tqdm==4.51.0
    scrapy==2.6.1
    w3lib==1.22.0

[options.extras_require]
tests=
    black==22.1.0
    build==0.7.0
    flake8==4.0.1
    pre-commit==2.17.0
    pytest==7.0.1
    pytest-cov==3.0.0

[options.entry_points]
console_scripts =
   train_language_model = language_modeling.domain.__main__:main

[options.packages.find]
exclude =
    tests