[metadata]
name = language_modeling
version = 0.0.1

[options]
packages = find:
install_requires =
    tensorboard==2.8.0
    tokenizers==0.11.5
    torch==1.11.0
    tqdm==4.51.0

[options.extras_require]
frontend=
    click==8
    streamlit==1.8.0
tests=
    black==22.1.0
    build==0.7.0
    flake8==4.0.1
    pre-commit==2.17.0
    pytest==7.0.1
    pytest-cov==3.0.0

[options.entry_points]
console_scripts =
   train_language_model = language_modeling.domain.__main__:main
   run_frontend = language_modeling.infra.application.frontend.__main__:main [frontend]

[options.packages.find]
exclude =
    tests