[metadata]
name = language_modeling
version = 0.0.1

[options]
packages = find:

[options.extras_require]
training=
    numpy==1.21.5
    tensorboard==2.8.0
    tokenizers==0.11.5
    torch==1.11.0
    tqdm==4.51.0
frontend=
    click==8
    streamlit==1.8.0
deep_learning_service=
    fastapi==0.75.0
    numpy==1.21.5
    uvicorn==0.17.6
    tokenizers==0.11.5
    torch==1.11.0
    tqdm==4.51.0
tests=
    black==22.1.0
    build==0.7.0
    flake8==4.0.1
    pre-commit==2.17.0
    pytest==7.0.1
    pytest-cov==3.0.0

[options.entry_points]
console_scripts =
   train_language_model = language_modeling.domain.__main__:main
   run_frontend = language_modeling.infra.application.frontend.__main__:main [frontend]
   run_deep_learning_service = language_modeling.infra.application.deep_learning_service.__main__:main [deep_learning_service]

[options.packages.find]
exclude =
    tests